--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Fried/grill sweet potatoes</h4>
+          <h4>Fried/Grill Sweet Potatoes</h4>
           <p>with Scrambled Egg Sauce</p>
         </div>
         <span>&#8358; 3000</span>
@@ -61,14 +61,14 @@
       <div class="flex">
         <div>
           <h4>Pancakes</h4>
-          <p>Served with Honey/Butter and Tea</p>
+          <p>served with Honey/Butter and Tea</p>
         </div>
         <span>&#8358; 3000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Waffles</h4>
-          <p>Served with Honey/Butter and Tea</p>
+          <p>served with Honey/Butter and Tea</p>
         </div>
         <span>&#8358; 3000</span>
       </div>
@@ -79,29 +79,29 @@
     <div class="grid">
       <div class="flex">
         <div>
-          <h4>Cream of Mushroom soup </h4>
-          <p>Served with Mini Bread Rolls</p>
+          <h4>Cream of Mushroom<br>Soup </h4>
+          <p>served with Mini Bread Rolls</p>
         </div>
         <span>&#8358; 2500</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Cream of Chicken soup</h4>
-          <p>Served with French Bread</p>
+          <h4>Cream of Chicken<br>Soup</h4>
+          <p>served with French Bread</p>
         </div>
         <span>&#8358; 2500</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Cream of Beef soup </h4>
-          <p>Served with French Bread</p>
+          <h4>Cream of Beef Soup </h4>
+          <p>served with French Bread</p>
         </div>
         <span>&#8358; 2500</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Cream of Vegetable soup </h4>
-          <p>Served with French Fries<br> and Chicken Wings</p>
+          <h4>Cream of Vegetable<br>Soup </h4>
+          <p>served with French Fries<br> and Chicken Wings</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
@@ -169,28 +169,28 @@
       <div class="flex">
         <div>
           <h4>Fried Rice</h4>
-          <p>Served with a choice of<br> Beef/Goat meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
+          <p>served with a choice of<br> Beef/Goat meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
       <div class="flex">
         <div>
           <h4>Caribbean Rice</h4>
-          <p>Served with Stir Fried Chicken</p>
+          <p>served with Stir Fried Chicken</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Coconut Rice with<br>Sunset Egg</h4>
-          <p>Served with a choice of<br> Fish/Chicken/Beef with Coleslaw</p>
+          <p>served with a choice of<br> Fish/Chicken/Beef with Coleslaw</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
       <div class="flex">
         <div>
           <h4>Jollof Rice</h4>
-          <p>Served with a choice of<br>Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
+          <p>served with a choice of<br>Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
@@ -198,22 +198,22 @@
         <div>
           <h4>Steamed White Rice</h4>
           <p>
-            Served with Tomatoe Sauce.<br>
-            Served with a choice of<br> Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
+            served with Tomatoe Sauce with a choice of<br>
+            Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Chinese Fried Rice</h4>
-          <p>Served with a choice of<br> Fish/Chicken/Beef with Coleslaw</p>
+          <p>served with a choice of<br> Fish/Chicken/Beef with Coleslaw</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Cinnamon Rice</h4>
-          <p>Served with Broccoli<br>with a choice of <br>Beef/Goat Meat/Fish/Chicken<br>
+          <p>served with Broccoli<br>with a choice of <br>Beef/Goat Meat/Fish/Chicken<br>
             with Plantain or Coleslaw</p>
         </div>
         <span>&#8358;4000</span>
@@ -360,28 +360,28 @@
       <div class='flex'>
         <div>
           <h4>Pounded Yam/ Semovita<br> Wheat/ Plantain Flour</h4>
-          <p>Served with Vegetable Soup<br> with a choice of Fish/Goat Meat/Beef</p>
+          <p>served with Vegetable Soup<br> with a choice of Fish/Goat Meat/Beef</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Pounded Yam/ Semovita/<br>Wheat/Plantain Flour</h4>
-          <p>Served with White Soup(Ofe Nsala)<br> with a choice of Fish/Meat/Beef</p>
+          <p>served with White Soup(Ofe Nsala)<br> with a choice of Fish/Meat/Beef</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Pounded Yam/ Semovita/<br>Wheat/Plantain Flour</h4>
-          <p>Served with Ogbono Soup <br> with a choice of Fish/Goat Meat/Beef</p>
+          <p>served with Ogbono Soup <br> with a choice of Fish/Goat Meat/Beef</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
       <div class="flex">
         <div>
           <h4>Pounded Yam/ Semovita<br> Wheat/ Plantain Flour</h4>
-          <p>Served with Bitter Leaf Soup <br>with a choice of<br>Fish/Goat Meat or Beef</p>
+          <p>served with Bitter Leaf Soup <br>with a choice of<br>Fish/Goat Meat or Beef</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
@@ -400,21 +400,21 @@
       <div class='flex'>
         <div>
           <h4>French Fries</h4>
-          <p>Served with Stir Fries<br>Sweet Pepper,Onions<br>garnished with Egg</p>
+          <p>served with Stir Fries<br>Sweet Pepper,Onions<br>garnished with Egg</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
       <div class="flex">
         <div>
           <h4>French Fries</h4>
-          <p>Served with Fried Chicken<br>Fresh Tomatoes and Parsley</p>
+          <p>served with Fried Chicken<br>Fresh Tomatoes and Parsley</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
       <div class="flex">
         <div>
           <h4>French Fries Sausage</h4>
-          <p>Served with Scrambled Eggs</p>
+          <p>served with Scrambled Eggs</p>
         </div>
         <span>&#8358; 3500</span>
       </div>
@@ -429,7 +429,7 @@
       <div class="flex">
         <div>
           <h4>French Fries</h4>
-          <p>Served with Crispy Chicken Wings<br>Chili Sauce</p>
+          <p>with Crispy Chicken Wings<br>Chili Sauce</p>
         </div>
         <span>&#8358; 5000</span>
       </div>
@@ -469,21 +469,21 @@
       <div class="flex">
         <div>
           <h4>Curry Chicken</h4>
-          <p>Served with Steamed Basmati Rice<br>Potatoes and Vegetables</p>
+          <p>served with Steamed Basmati Rice<br>Potatoes and Vegetables</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Chinese Stir<br>Fried Chicken</h4>
-          <p>Served with Rice or<br>Pasta of you choice and Vegetables</p>
+          <p>served with Rice or<br>Pasta of you choice and Vegetables</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Chicken Kebab Cubes</h4>
-          <p>With Onions and Sweet Pepper<br>served with French Fries</p>
+          <p>with Onions and Sweet Pepper<br>served with French Fries</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
@@ -495,13 +495,13 @@
       <div class='flex'>
         <div>
           <h4>Peanut Butter Beef sauce</h4>
-          <p>Served with rice <br>Fresh tomatoes with cucumber</p>
+          <p>served with Rice <br>Fresh Tomatoes with Cucumber</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Garlic and Rosemary beef </h4>
+          <h4>Garlic and Rosemary Beef </h4>
           <p>with Steamed White Rice</p>
         </div>
         <span>&#8358; 4000</span>
@@ -509,7 +509,7 @@
       <div class="flex">
         <div>
           <h4>Beef Vindaloo</h4>
-          <p>Served with steamed White Rice <br>or Mashed Potatoes</p>
+          <p>with steamed White Rice <br>or Mashed Potatoes</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
@@ -530,7 +530,7 @@
       <div class="flex">
         <div>
           <h4>Mongolian Beef</h4>
-          <p>Served with Steamed White Rice</p>
+          <p>served with Steamed White Rice</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
@@ -550,14 +550,14 @@
       <div class='flex'>
         <div>
           <h4>Buttered Fried Fish Fillet</h4>
-          <p>With Mashed Potatoes,Vegetable and Lemon</p>
+          <p>with Mashed Potatoes<br>Vegetable and Lemon</p>
         </div>
         <span>&#8358;5000 </span>
       </div>
       <div class="flex">
         <div>
           <h4>Buttered Fried Fish Fillet</h4>
-          <p>With Mashed Potatoes,Vegetable and Lemon</p>
+          <p>with Mashed Potatoes<br>Vegetable and Lemon</p>
         </div>
         <span>&#8358;5000 </span>
       </div>
@@ -571,7 +571,7 @@
       <div class='flex'>
         <div>
           <h4>Buttered Fried Fish Fillet</h4>
-          <p>Served with French Fries,Coleslaw<br>Tomatoes and Cucumber</p>
+          <p>served with French Frie<br>Coleslaw,Tomatoes and Cucumber</p>
         </div>
         <span>&#8358; 5000 </span>
       </div>
