--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div>
           <h4>Steamed White Rice</h4>
           <p>
-            served with Tomatoe Sauce with a choice of<br>
+            served with Tomatoe Sauce<br>with a choice of<br>
             Beef/Goat Meat/Chicken/Fish<br>with Plantain or Coleslaw</p>
         </div>
         <span>&#8358; 4000</span>
@@ -366,14 +366,14 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Pounded Yam/ Semovita/<br>Wheat/Plantain Flour</h4>
+          <h4>Pounded Yam/ Semovita<br>Wheat/Plantain Flour</h4>
           <p>served with White Soup(Ofe Nsala)<br> with a choice of Fish/Meat/Beef</p>
         </div>
         <span>&#8358; 4000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Pounded Yam/ Semovita/<br>Wheat/Plantain Flour</h4>
+          <h4>Pounded Yam/ Semovita<br>Wheat/Plantain Flour</h4>
           <p>served with Ogbono Soup <br> with a choice of Fish/Goat Meat/Beef</p>
         </div>
         <span>&#8358; 3500</span>
@@ -494,7 +494,7 @@
     <div class="grid">
       <div class='flex'>
         <div>
-          <h4>Peanut Butter Beef sauce</h4>
+          <h4>Peanut Butter Beef Sauce</h4>
           <p>served with Rice <br>Fresh Tomatoes with Cucumber</p>
         </div>
         <span>&#8358; 4000</span>
@@ -516,7 +516,7 @@
       <div class="flex">
         <div>
           <h4>Anoora's Beef Sauce</h4>
-          <p>with mashed Potatoes</p>
+          <p>with Mashed Potatoes</p>
         </div>
         <span>&#8358; 4500</span>
       </div>
@@ -597,13 +597,13 @@
       <div class='flex'>
         <div>
           <h4>Stir Fried Shrimps/ Prawns</h4>
-          <p>with Mushroom Cauliflower,broccoli<br>Carrot served with Rice</p>
+          <p>with Mushroom,Cauliflower<br>Broccoli,Carrot served with Rice</p>
         </div>
         <span>&#8358; 9000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Louisiana Shrimp Eoouffee*</h4>
+          <h4>Louisiana Shrimp<br>Eoouffee*</h4>
           <p>South-West Louisiana Shrimp sauce <br>served steamed White Rice</p>
         </div>
         <span>&#8358; 9000</span>
@@ -641,8 +641,8 @@
     <div class='grid'>
       <div class="flex">
         <div>
-          <h4>Vegan Mushroom Bourguignon</h4>
-          <p>with Mashed Potatoes,Carrot,Celery,Cauliflower</p>
+          <h4>Vegan Mushroom<br>Bourguignon</h4>
+          <p>with Mashed Potatoes,Carrot<br>Celery,Cauliflower</p>
         </div>
         <span>&#8358;4500</span>
       </div>
