--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
       <ul class="nav-menu">
-        <li class="nav-item"><a class='nav-link' href="index.html">MAIN</a>
+        <li class="nav-item"><a class='nav-link' href="index.html">FOOD</a>
         <li>
         <li class="nav-item"><a class='nav-link' href="drinks.html">DRINKS</a></li>
         <li class="nav-item"><a class='nav-link' href="dessert.html">DESSERT</a></li>
@@ -596,7 +596,7 @@
     <div class="grid">
       <div class='flex'>
         <div>
-          <h4>Stir Fried Shrimps/ Prawns</h4>
+          <h4>Stir Fried Shrimps<br> or Prawns</h4>
           <p>with Mushroom,Cauliflower<br>Broccoli,Carrot served with Rice</p>
         </div>
         <span>&#8358; 9000</span>
