--- a/dessert.html
+++ b/dessert.html
@@ -13,7 +13,7 @@
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
       <ul class="nav-menu">
-        <li class="nav-item"><a class='nav-link'href="index.html">MAIN</a><li>
+        <li class="nav-item"><a class='nav-link'href="index.html">FOOD</a><li>
         <li class="nav-item"><a class='nav-link'href="drinks.html">DRINKS</a></li>
         <li class="nav-item"><a class='nav-link'href="dessert.html">DESSERT</a></li>
       </ul>
@@ -69,29 +69,29 @@
     <div class="grid">
       <div class="flex">
           <div>
-            <h4>CBAE special pizza (12 inches)</h4>
-            <p>Tomatoes sauce, diced Chicken<br>Onion,Green Pepper,Cheese<br>chopped Tomatoes and Sausage</p>
+            <h4>CBAE Special Pizza<br>(12 inches)</h4>
+            <p>Tomatoes sauce,Diced Chicken<br>Onion,Green Pepper,Cheese<br>Chopped Tomatoes and Sausage</p>
           </div>
           <span>&#8358; 6000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Mexican Pizza (12 inches)</h4>
-          <p>Tomatoes sauce,Minced Meat,Cheese<br>Onion,Tomatoes,Green Pepper</p>  
+          <p>Tomatoes sauce,Minced Meat<br>Cheese,Onion,Tomatoes,Green Pepper</p>  
         </div>
         <span>&#8358; 6000</span>
       </div>
       <div class="flex">
         <div>
-          <h4>Vegetarian Pizza (12 inches)</h4>
-          <p>Tomatoes sauce,Mushroom,Cheese<br>Onion,Tomatoes,Green Pepper & Olives</p>
+          <h4>Vegetarian Pizza<br>(12 inches)</h4>
+          <p>Tomatoes sauce,Mushroom,Cheese<br>Onion,Tomatoes,Green Pepper<br> Olives</p>
         </div>
         <span>&#8358; 6000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Hawaiian Pizza</h4>
-          <p>Pineapple,Tomato Sauce<br>Diced Chicken,Onion,Green pepper<br>Cheese chopped Tomatoes and Sausage</p>
+          <p>Pineapple,Tomato Sauce<br>Diced Chicken,Onion<br>Green pepper,Cheese<br>Chopped Tomatoes and Sausage</p>
         </div>
         <span>&#8358; 6000</span>
       </div>
