--- a/drinks.html
+++ b/drinks.html
@@ -14,7 +14,7 @@
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
       <ul class="nav-menu">
-        <li class="nav-item"><a class='nav-link'href="index.html">MAIN</a><li>
+        <li class="nav-item"><a class='nav-link'href="index.html"></a>FOOD<li>
         <li class="nav-item"><a class='nav-link'href="drinks.html">DRINKS</a></li>
         <li class="nav-item"><a class='nav-link'href="dessert.html">DESSERT</a></li>
       </ul>
