--- a/dessert.html
+++ b/dessert.html
@@ -76,7 +76,7 @@
       </div>
       <div class="flex">
         <div>
-          <h4>Mexican Pizza (12 inches)</h4>
+          <h4>Mexican Pizza<br>(12 inches)</h4>
           <p>Tomatoes sauce,Minced Meat<br>Cheese,Onion,Tomatoes,Green Pepper</p>  
         </div>
         <span>&#8358; 6000</span>
@@ -102,13 +102,13 @@
     <div class="grid">
       <div class="flex">
         <div>
-          <h4>Ten pieces of Samosa/Spring rolls</h4>
+          <h4>Ten pieces of<br>Samosa/Spring Rolls</h4>
           <p>with hot Tomatoes sauce</p>
         </div>
         <span>&#8358; 2500</span>
       </div>
       <div class="flex">
-        <h4>Stir Fried/ Baked Chicken wings</h4>
+        <h4>Stir Fried/Baked<br>Chicken Wings</h4>
         <span>&#8358; 2000</span>
       </div>
       <div class="flex">
@@ -166,21 +166,21 @@
       <div class="flex">
         <div>
           <h4>Dunama's Fish</h4>
-          <p>Grilled jumbo Fish<br> Served with French Fries and Coleslaw</p>
+          <p>Grilled jumbo Fish<br>served with French Fries<br>and Coleslaw</p>
         </div>
         <span>&#8358; 25000</span>
       </div>
       <div  class="flex">
         <div>
           <h4>Annora's delight</h4>
-          <p>Crispy Fried Chicken breast<br>served with French Fries,Fried Sweet Potatoes<br>Onion rings Ketchup</p>
+          <p>Crispy Fried Chicken Breast<br>served with French Fries<br>Fried Sweet Potatoes<br>Onion rings Ketchup</p>
         </div> 
         <span>&#8358; 25000</span>
       </div>
       <div class="flex">
         <div>
           <h4>Grilled Platter Beef,</h4>
-          <p>Lamb,Chicken, Sausage,Sweet Corn<br>served with Vegetables and Rice</p>
+          <p>Lamb,Chicken,Sausage,Sweet Corn<br>served with Vegetables and Rice</p>
         </div>
         <span>&#8358; 30000</span>
       </div>
