--- a/dessert.html
+++ b/dessert.html
@@ -77,7 +77,7 @@
       <div class="flex">
         <div>
           <h4>Mexican Pizza<br>(12 inches)</h4>
-          <p>Tomatoes sauce,Minced Meat<br>Cheese,Onion,Tomatoes,Green Pepper</p>  
+          <p>Tomatoes sauce,Minced Meat<br>Cheese,Onion,Tomatoes<br>Green Pepper</p>  
         </div>
         <span>&#8358; 6000</span>
       </div>
@@ -180,7 +180,7 @@
       <div class="flex">
         <div>
           <h4>Grilled Platter Beef,</h4>
-          <p>Lamb,Chicken,Sausage,Sweet Corn<br>served with Vegetables and Rice</p>
+          <p>Lamb,Chicken,Sausage<br>Sweet Corn,served with<br>Vegetables and Rice</p>
         </div>
         <span>&#8358; 30000</span>
       </div>
