--- a/dessert.html
+++ b/dessert.html
@@ -23,8 +23,10 @@
       </div>
     </div>  
   </nav>
+  <div class="image">
+    <img class="image-banner"src="../images/pizza.jpg" alt="">
+  </div>
   <main class="container">
-
     <!-- Desserts -->
     <h2 class="head-center">Pastry</h2>
     <div class="grid">
