--- a/drinks.html
+++ b/drinks.html
@@ -24,6 +24,9 @@
       </div>
     </div>  
   </nav>
+  <div class="image">
+    <img class="image-banner"src="../images/drinks.jpg" alt="">
+  </div>
   <main class="container">
 
     <!-- Tea/Coffee -->
