--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
   </nav>
 
   <!-- BODY -->
+  <div class="image">
+    <img class="image-banner"src="../images/pasta.jpg" alt="">
+  </div>
   <main class="container">
-
+    
     <!-- BreakFast -->
     <h2 class='head-center'>BreakFast</h2>
     <div class="grid">
@@ -73,7 +76,7 @@
     </div>
 
     <!--Starters -->
-    <h2 class="head-center">Starters</h2>
+    <h2 class="head-center">Starter</h2>
     <div class="grid">
       <div class="flex">
         <div>
