--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <main class="container">
     <div class="image">
-      <img class="image-banner"src="../images/pasta.jpg" alt="">
+      <img class="image-banner"src="images/pasta.jpg" alt="">
     </div>
     <!-- BreakFast -->
     <h2 class='head-center'>BreakFast</h2>
