--- a/dessert.html
+++ b/dessert.html
@@ -24,7 +24,7 @@
     </div>  
   </nav>
   <div class="image">
-    <img class="image-banner"src="../images/pizza.jpg" alt="">
+    <img class="image-banner"src="images/pizza.jpg" alt="">
   </div>
   <main class="container">
     <!-- Desserts -->
