--- a/drinks.html
+++ b/drinks.html
@@ -25,7 +25,7 @@
     </div>  
   </nav>
   <div class="image">
-    <img class="image-banner"src="../images/drinks.jpg" alt="">
+    <img class="image-banner"src="images/drinks.jpg" alt="">
   </div>
   <main class="container">
 
