--- a/dessert.html
+++ b/dessert.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CBE MENU</title>
+    <title>CBAE MENU</title>
   </head>
 <body>
   <nav>
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
       <ul class="nav-menu">
-        <li class="nav-item"><a class='nav-link'href="index.html">FOOD</a><li>
+        <li class="nav-item"><a class='nav-link'href="index.html">FOOD</a></li>
         <li class="nav-item"><a class='nav-link'href="drinks.html">DRINKS</a></li>
         <li class="nav-item"><a class='nav-link'href="dessert.html">DESSERT</a></li>
       </ul>
@@ -197,7 +197,7 @@
   </main>
   <footer>
     <ul>
-      <li><a href="https://www.instagram.com/cbaerestaurant.grill/"target="_blank">Instagram</a></li>
+      <li><a href="https://www.instagram.com/cbaerestaurant.grill/"target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
   </footer>  
   <script src="index.js"></script>
