--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
-  <title>CBE MENU</title>
+  <title>CBAE MENU</title>
 </head>
 
 <body>
@@ -16,8 +17,7 @@
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
       <ul class="nav-menu">
-        <li class="nav-item"><a class='nav-link' href="index.html">FOOD</a>
-        <li>
+        <li class="nav-item"><a class='nav-link' href="index.html">FOOD</a></li>
         <li class="nav-item"><a class='nav-link' href="drinks.html">DRINKS</a></li>
         <li class="nav-item"><a class='nav-link' href="dessert.html">DESSERT</a></li>
       </ul>
@@ -729,11 +729,14 @@
       </div>
     </div>
   </main>
-  <footer>
+
+  <footer class="container">
     <ul>
-      <li><a href="">Instagram</a></li>
+      <li><a href="https://www.instagram.com/cbaerestaurant.grill/"target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><i class="fa-regular fa-phone"></i></li>
     </ul>
   </footer>
+
   <script src="index.js"></script>
 </body>
 
