--- a/dessert.html
+++ b/dessert.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>CBAE MENU</title>
   </head>
@@ -17,9 +18,7 @@
         <li class="nav-item"><a class='nav-link'href="dessert.html">DESSERT</a></li>
       </ul>
       <div class="hamburger">
-        <span class="hamburger-icon material-symbols-outlined">
-          menu
-          </span>
+        <span class="menu">Menu<i class="fa-light fa-bars hamburger-icon"></i></span>
       </div>
     </div>  
   </nav>
@@ -195,11 +194,14 @@
       </div>
     </div>
   </main>
-  <footer>
+
+  <footer class="container">
     <ul>
       <li><a href="https://www.instagram.com/cbaerestaurant.grill/"target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><i class="fa-regular fa-phone"></i></li>
     </ul>
-  </footer>  
+  </footer>
+
   <script src="index.js"></script>
   </body>
 </html>
