--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <li class="nav-item"><a class='nav-link' href="dessert.html">DESSERT</a></li>
       </ul>
       <div class="hamburger">
-        <span class="hamburger-icon material-symbols-outlined">
-          menu
-        </span>
+        <span class="menu">Menu<i class="fa-light fa-bars hamburger-icon"></i></span>
       </div>
     </div>
   </nav>
