--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="style.css">
   <title>CBAE MENU</title>
 </head>
@@ -22,7 +23,14 @@
         <li class="nav-item"><a class='nav-link' href="dessert.html">DESSERT</a></li>
       </ul>
       <div class="hamburger">
-        <span class="menu">Menu<i class="fa-light fa-bars hamburger-icon"></i></span>
+        <div class="menu-div">
+          <span class="menu">Menu</span>
+          <span class="material-symbols-outlined">
+            menu
+            </span>
+        </div>
+        
+      
       </div>
     </div>
   </nav>
