--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
       <div class="hamburger">
         <div class="menu-div">
           <span class="menu">Menu</span>
-          <span class="material-symbols-outlined">
+          <span class="material-symbols-outlined bars">
             menu
             </span>
         </div>
-        
-      
       </div>
     </div>
   </nav>
@@ -739,7 +737,9 @@
   <footer class="container">
     <ul>
       <li><a href="https://www.instagram.com/cbaerestaurant.grill/"target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-      <li><i class="fa-regular fa-phone"></i></li>
+      <li><a href="tel:+23408133336868" target="_blank"><span class="material-symbols-outlined call">
+        call</a>
+        </span></li>
     </ul>
   </footer>
 
