--- a/dessert.html
+++ b/dessert.html
@@ -10,6 +10,12 @@
     <title>CBAE MENU</title>
   </head>
 <body>
+    <!-- Smooth Scroll -->
+    <div id="progress">
+      <span id="progress-value">&#x1F815;</span>
+    </div>
+
+    <!-- NavBar -->
   <nav>
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
