--- a/drinks.html
+++ b/drinks.html
@@ -10,6 +10,12 @@
     <title>CBAE MENU</title>
   </head>
 <body>
+  <!-- Smooth Scroll -->
+  <div id="progress">
+    <span id="progress-value">&#x1F815;</span>
+  </div>
+
+  
   <!-- NAV -->
   <nav>
     <div class="container-nav flex-navbar">
