--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </head>
 
 <body>
-  <!-- NAV -->
+  <!-- Smooth Scroll -->
+  <div id="progress">
+    <span id="progress-value">&#x1F815;</span>
+  </div>
 
+
+  <!-- NAV -->
   <nav>
     <div class="container-nav flex-navbar">
       <img src="images/CBAE RESTAURANT & GRILL MR JLIKA BOBO 2117.png" alt="logo">
@@ -728,7 +733,7 @@
         <span>&#8358; 2000</span>
       </div>
       <div class="flex">
-        <h4>Extra scrambled eggs</h4>
+        <h4>Extra Scrambled Eggs</h4>
         <span>&#8358; 500</span>
       </div>
     </div>
